--- a/css/jquery-autocomplete.css
+++ b/css/jquery-autocomplete.css
@@ -39,3 +39,29 @@ ul.autocomplete li a{
     border-radius: 4px;
     color: #333333;
 }
+
+.tangram-suggestion td {
+    padding: 0;
+    height:30px;
+    cursor:default;
+    border:1px solid white;
+    -moz-border-radius: 4px; 
+    -webkit-border-radius: 4px; 
+    border-radius: 4px;
+    list-style: none outside none;
+    background-color: white;
+}
+
+.tangram-suggestion td:hover{
+    border:1px solid #48C9B0;
+    background-color:#48C9B0;
+    color: #FFFFFF;
+}
+
+.tangram-suggestion-main {
+    -moz-border-radius: 4px; 
+    -webkit-border-radius: 4px; 
+    border-radius: 4px;
+    background-color:white;
+    border: 1px solid #48C9B0;
+}
